# python_cards_questions

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/app/: auth.py  config.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  cards.py
backend/app/scripts/: migrate_md.py  new_questions.md  questions.md
backend/tests/: conftest.py  test_cards.py
bot/: Dockerfile  cards.py  config.py  database.py  main.py  models.py  pyproject.toml  state.py
bot/tests/: test_cards.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: CardComponent.vue  FilterBar.vue
frontend/src/composables/: useDebounceFn.js
frontend/src/router/: index.js
frontend/src/stores/: admin.js  cards.js
frontend/src/views/: AdminView.vue  CardView.vue  HomeView.vue
