[project]
name = "python-cards-questions"
version = "0.1.0"
description = "python cards questions"
requires-python = ">=3.13"
dependencies = [
    "aiogram~=3.24.0",
    "apscheduler~=3.11.2",
    "fastapi==0.129.0",
    "uvicorn[standard]==0.41.0",
    "sqlalchemy==2.0.46",
    "alembic==1.18.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "PyJWT==2.11.0",
]

[tool.uv]
dev-dependencies = []

